# tree-sitter-javascript

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  go.mod  grammar.js  package.json  pyproject.toml  tree-sitter.json
bindings/go/: binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_javascript/: __init__.py
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c
test/corpus/: base-syntax.txt  comments.txt  destructuring.txt  imports.txt  jsx.txt  keywords.txt  strings.txt
test/corpus/declarations/: functions.txt  imports.txt  variables.txt
test/corpus/expressions/: call-expression.txt  primary.txt
test/corpus/literals/: array-literal.txt  object-literal.txt
test/corpus/operators/: assignment.txt  comparison.txt  logical.txt  ternary.txt
test/corpus/statements/: if.txt  return.txt
test/corpus/types/: advanced.txt  basic.txt  generics.txt
